--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Page Title</title>
+		<title>הפרוייקט של סנופקין</title>  
+    <link rel="icon" type="image/x-icon" href="src/icon.ico">
         <!-- Load FontAwesome icons -->
   <link rel="stylesheet"
         href=
@@ -47,8 +48,14 @@
       <i class="fa fa-volume-up"></i>
     </div>
   </div>
+  
+  <!-- lower zone-->
+  <div>
 
-	<script src="src/main.js">
-	</script>
+  </div>
+
+	<script src="src/main.js"></script>
+
+
 	</body>
 </html>
