--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div class="player">
     <!-- Define the section for displaying details -->
       <div class="details">
+         
           <div class="now-playing">מנגן x מתוך y</div>
           <div class="track-art"></div>
           <div class="track-name">Track Name</div>
@@ -50,6 +51,11 @@
           <i class="fa fa-volume-up"></i>
         </div>
       </div>
+      <div class="container">
+        <button onclick="window.location.href='https://drive.google.com/drive/folders/1zo9Z5QNpr3At5i8zFcZ3cmxt486bOX4c?usp=share_link';">
+          להורדת האלבום
+        </button>
+      </div> 
 
 
   
