--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <div class="now-playing">מנגן x מתוך y</div>
           <div class="track-art"></div>
           <div class="container">
-            <button onclick="window.location.href='https://drive.google.com/drive/folders/1zo9Z5QNpr3At5i8zFcZ3cmxt486bOX4c?usp=share_link';">
+            <button onclick="window.location.href='https://drive.google.com/drive/folders/1OiTdRHbVeqr90jfdxMgO2z7OXcZMLQAm';">
               להורדת האלבום
             </button>
           </div> 
