--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>הפרוייקט של סנופקין</title>  
     <link rel="icon" type="image/x-icon" href="src/icon.ico">
         <!-- Load FontAwesome icons -->
