add graphics and thumbnail. fix size of window

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 	<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>הפרוייקט של סנופקין</title>  
+    <meta property="og:image" content="src/graphics/COVER.jpg">
+		<title>הפרק האחרון של הסנופקינים</title>  
     <link rel="icon" type="image/x-icon" href="src/icon.ico">
         <!-- Load FontAwesome icons -->
   <link rel="stylesheet"
