graphics resize, small changes

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 	<head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="האלבום של סנופקינים" />
     <meta property="og:image" content="src/graphics/COVER.jpg">
-		<title>הפרק האחרון של הסנופקינים</title>  
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>האלבום של סנופקינים</title>  
     <link rel="icon" type="image/x-icon" href="src/icon.ico">
         <!-- Load FontAwesome icons -->
   <link rel="stylesheet"
