--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html prefix="og: https://ogp.me/ns#">
 	<head>
-    <meta charset="UTF-8">
     <meta property="og:title" content="האלבום של סנופקינים" />
-    <meta property="og:image" content="src/graphics/COVER.jpg">
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://grooveratr.github.io/" />
+    <meta property="og:image" content="src/graphics/COVER.jpg" />
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>האלבום של סנופקינים</title>  
     <link rel="icon" type="image/x-icon" href="src/icon.ico">
