--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
-<html prefix="og: https://ogp.me/ns#">
+<html >
 	<head>
-    <meta property="og:title" content="האלבום של סנופקינים" />
+
+    <meta name="msapplication-TileImage" content="src/graphics/COVER.jpg">    
+
+    <!-- fb & Whatsapp -->
+    <!-- Site Name, Title, and Description to be displayed -->
+    <meta property="og:site_name" content="האלבום של סנופקינים">
+    <meta property="og:title" content="האלבום של סנופקינים">
+    <meta property="og:description" content="שירי הסדרות שכולנו גדלנו עליהן עכשיו  באיכות מרהיבה!">
+    <!-- Image to display -->
+    <meta property="og:image" content="src/graphics/COVER.jpg">
+    <!-- No need to change anything here -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://grooveratr.github.io/" />
-    <meta property="og:image" content="src/graphics/COVER.jpg" />
+    <meta property="og:image:type" content="image/jpeg">
+    <!-- Size of image. Any size up to 300. Anything above 300px will not work in WhatsApp -->
+    <meta property="og:image:width" content="200">
+    <meta property="og:image:height" content="200">
+    <!-- Website to visit when clicked in fb or WhatsApp-->
+    <meta property="og:url" content="https://grooveratr.github.io/">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>האלבום של סנופקינים</title>  
