--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <meta property="og:title" content="האלבום של סנופקינים">
     <meta property="og:description" content="שירי הסדרות שכולנו גדלנו עליהן עכשיו  באיכות מרהיבה!">
     <!-- Image to display -->
-    <meta property="og:image" content="src/graphics/COVER.jpg">
+    <meta property="og:image" content="src/graphics/COVER.png">
     <!-- No need to change anything here -->
     <meta property="og:type" content="website" />
     <meta property="og:image:type" content="image/jpeg">
     <!-- Size of image. Any size up to 300. Anything above 300px will not work in WhatsApp -->
-    <meta property="og:image:width" content="200">
-    <meta property="og:image:height" content="200">
+    <meta property="og:image:width" content="300">
+    <meta property="og:image:height" content="300">
     <!-- Website to visit when clicked in fb or WhatsApp-->
     <meta property="og:url" content="https://grooveratr.github.io/">
 
