--- a/index.html
+++ b/index.html
@@ -1,36 +1,22 @@
 <!DOCTYPE html>
 <html >
 	<head>
-
     <meta name="msapplication-TileImage" content="src/graphics/COVER.jpg">    
-
-    <!-- fb & Whatsapp -->
-    <!-- Site Name, Title, and Description to be displayed -->
     <meta property="og:site_name" content="האלבום של סנופקינים">
     <meta property="og:title" content="האלבום של סנופקינים">
-    <meta property="og:description" content="שירי הסדרות שכולנו גדלנו עליהן עכשיו  באיכות מרהיבה!">
-    <!-- Image to display -->
+    <meta property="og:description" content="שירי הסדרות שכולנו גדלנו עליהן עכשיו בעיבודים חדשים ומרגשים">
     <meta property="og:image" content="src/graphics/COVER.png">
-    <!-- No need to change anything here -->
     <meta property="og:type" content="website" />
     <meta property="og:image:type" content="image/jpeg">
-    <!-- Size of image. Any size up to 300. Anything above 300px will not work in WhatsApp -->
     <meta property="og:image:width" content="300">
     <meta property="og:image:height" content="300">
-    <!-- Website to visit when clicked in fb or WhatsApp-->
     <meta property="og:url" content="https://grooveratr.github.io/">
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>האלבום של סנופקינים</title>  
     <link rel="icon" type="image/x-icon" href="src/icon.ico">
-        <!-- Load FontAwesome icons -->
-  <link rel="stylesheet"
-        href=
-"https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-   <!-- Load the custom CSS style file -->
-
-  <link rel="stylesheet" type="text/css" href="src/style.css">
+    <link rel="stylesheet" href= "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+    <link rel="stylesheet" type="text/css" href="src/style.css">
 	</head>
 	<body>
 
