--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
     <meta property="og:url" content="https://grooveratr.github.io/">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-HRL4337KJT"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+  gtag('config', 'G-HRL4337KJT');
+</script>
 		<title>האלבום של סנופקינים</title>  
     <link rel="icon" type="image/x-icon" href="src/icon.ico">
     <link rel="stylesheet" href= "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
